# FreeAtrust

./: CMakeLists.txt  README.md  index.html  main.cpp
.github/workflows/: cmake-single-platform.yml
